--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -44,8 +44,11 @@
         <property name="maximum">
          <double>100.000000000000000</double>
         </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
         <property name="value">
-         <double>-2.000000000000000</double>
+         <double>0.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -57,8 +60,11 @@
         <property name="maximum">
          <double>100.000000000000000</double>
         </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
         <property name="value">
-         <double>-1.000000000000000</double>
+         <double>0.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -70,8 +76,11 @@
         <property name="maximum">
          <double>100.000000000000000</double>
         </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
         <property name="value">
-         <double>-2.000000000000000</double>
+         <double>2.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -94,8 +103,11 @@
         <property name="maximum">
          <double>100.000000000000000</double>
         </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
         <property name="value">
-         <double>2.000000000000000</double>
+         <double>0.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -107,8 +119,11 @@
         <property name="maximum">
          <double>100.000000000000000</double>
         </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
         <property name="value">
-         <double>1.000000000000000</double>
+         <double>0.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -120,8 +135,11 @@
         <property name="maximum">
          <double>100.000000000000000</double>
         </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
         <property name="value">
-         <double>2.000000000000000</double>
+         <double>-1.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -144,8 +162,11 @@
         <property name="maximum">
          <double>100.000000000000000</double>
         </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
         <property name="value">
-         <double>-2.000000000000000</double>
+         <double>-1.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -156,6 +177,9 @@
         </property>
         <property name="maximum">
          <double>100.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
         </property>
         <property name="value">
          <double>-2.000000000000000</double>
@@ -169,6 +193,9 @@
         </property>
         <property name="maximum">
          <double>100.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
         </property>
         <property name="value">
          <double>2.000000000000000</double>
